// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportSceneToR3fJsx > emits semantic and behavior metadata as deterministic comments and userData 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
/* Semantic groups: display_area=display(5), seating_area=seating(2), lighting_zone=lighting(2), environment=environment(3) */
/* Behaviors: product_01_info:show_info(1) */
<>
    {/* showroom-root - Messy Product Showroom */}
    <group name="Messy Product Showroom" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* floor - Floor */}
      {/* semantics: role=environment | group=environment */}
      <group name="Floor" position={[0, -0.05, 0]} rotation={[0, 0, 0]} scale={[8, 0.1, 6]} userData={{"semantics":{"role":"environment","groupId":"environment","source":"rule"},"semanticRole":"environment","semanticGroupId":"environment"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* wall - North Wall */}
      {/* semantics: role=environment | group=environment */}
      <group name="North Wall" position={[0, 1.6, -3]} rotation={[0, 0, 0]} scale={[8, 3.2, 0.12]} userData={{"semantics":{"role":"environment","groupId":"environment","source":"rule"},"semanticRole":"environment","semanticGroupId":"environment"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_01 - Product 01 */}
      {/* semantics: role=product | group=display_area | info=Product 01 */}
      <group name="Product 01" position={[-1.8, 0.65, 0.4]} rotation={[0, 0.4, 0]} scale={[0.65, 0.9, 0.65]} userData={{"semantics":{"role":"product","groupId":"display_area","source":"rule"},"behaviorRefs":["product_01_info"],"semanticRole":"product","semanticGroupId":"display_area","behaviors":{"info":{"title":"Product 01","description":"Demo info"}}}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* bench - Bench */}
      {/* semantics: role=seating | group=seating_area */}
      <group name="Bench" position={[-2.6, 0.32, 1.9]} rotation={[0, 0.18, 0]} scale={[1.5, 0.45, 0.55]} userData={{"semantics":{"role":"seating","groupId":"seating_area","source":"rule"},"semanticRole":"seating","semanticGroupId":"seating_area"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_table - Display Table */}
      {/* semantics: role=display | group=display_area */}
      <group name="Display Table" position={[-0.4, 0.28, 0.15]} rotation={[0, -0.12, 0]} scale={[1.8, 0.35, 0.9]} userData={{"semantics":{"role":"display","groupId":"display_area","source":"rule"},"semanticRole":"display","semanticGroupId":"display_area"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_03 - Product 03 */}
      {/* semantics: role=product | group=display_area */}
      <group name="Product 03" position={[0.35, 0.8, 1.45]} rotation={[0, 0.85, 0]} scale={[0.55, 1.1, 0.55]} userData={{"semantics":{"role":"product","groupId":"display_area","source":"rule"},"semanticRole":"product","semanticGroupId":"display_area"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* light_fill - Light Fill */}
      {/* semantics: role=lighting | group=lighting_zone */}
      <group name="Light Fill" position={[3.1, 2.4, 2.5]} rotation={[0, -0.4, 0]} scale={[0.25, 0.25, 0.25]} userData={{"semantics":{"role":"lighting","groupId":"lighting_zone","source":"rule"},"semanticRole":"lighting","semanticGroupId":"lighting_zone"}}>
        <ambientLight intensity={0.35} />
      </group>
      {/* chair - Chair */}
      {/* semantics: role=seating | group=seating_area */}
      <group name="Chair" position={[2.7, 0.45, 1.65]} rotation={[0, -0.55, 0]} scale={[0.75, 0.9, 0.75]} userData={{"semantics":{"role":"seating","groupId":"seating_area","source":"rule"},"semanticRole":"seating","semanticGroupId":"seating_area"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_plinth - Display Plinth */}
      {/* semantics: role=display | group=display_area */}
      <group name="Display Plinth" position={[1.3, 0.32, 1.15]} rotation={[0, 0.1, 0]} scale={[0.9, 0.65, 0.9]} userData={{"semantics":{"role":"display","groupId":"display_area","source":"rule"},"semanticRole":"display","semanticGroupId":"display_area"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_02 - Product 02 */}
      {/* semantics: role=product | group=display_area */}
      <group name="Product 02" position={[2.1, 0.55, -0.2]} rotation={[0, -0.25, 0]} scale={[0.8, 0.7, 0.8]} userData={{"semantics":{"role":"product","groupId":"display_area","source":"rule"},"semanticRole":"product","semanticGroupId":"display_area"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* light_key - Light Key */}
      {/* semantics: role=lighting | group=lighting_zone */}
      <group name="Light Key" position={[-3.2, 3.4, 2.2]} rotation={[0, 0.5, 0]} scale={[0.25, 0.25, 0.25]} userData={{"semantics":{"role":"lighting","groupId":"lighting_zone","source":"rule"},"semanticRole":"lighting","semanticGroupId":"lighting_zone"}}>
        <directionalLight intensity={1.2} castShadow />
      </group>
      {/* backdrop_panel - Backdrop Panel */}
      {/* semantics: role=environment | group=environment */}
      <group name="Backdrop Panel" position={[-2.4, 1.05, -2.65]} rotation={[0, 0.18, 0]} scale={[1.6, 2.1, 0.1]} userData={{"semantics":{"role":"environment","groupId":"environment","source":"rule"},"semanticRole":"environment","semanticGroupId":"environment"}}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for default fixture 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* default-root - Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* default-cube-1 - Cube 1 */}
      <group name="Cube 1" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for gallery kit 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* gallery-root - Gallery */}
    <group name="Gallery" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* gallery-hall - Hall */}
      <group name="Hall" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* gallery-frame-0-0 - Frame 1-1 */}
        <group name="Frame 1-1" position={[-1.1, 0.45, -1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-0-1 - Frame 1-2 */}
        <group name="Frame 1-2" position={[0, 0.45, -1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-0-2 - Frame 1-3 */}
        <group name="Frame 1-3" position={[1.1, 0.45, -1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-0 - Frame 2-1 */}
        <group name="Frame 2-1" position={[-1.1, 0.45, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-1 - Frame 2-2 */}
        <group name="Frame 2-2" position={[0, 0.45, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-1-2 - Frame 2-3 */}
        <group name="Frame 2-3" position={[1.1, 0.45, 0]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-0 - Frame 3-1 */}
        <group name="Frame 3-1" position={[-1.1, 0.45, 1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-1 - Frame 3-2 */}
        <group name="Frame 3-2" position={[0, 0.45, 1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* gallery-frame-2-2 - Frame 3-3 */}
        <group name="Frame 3-3" position={[1.1, 0.45, 1.1]} rotation={[0, 0, 0]} scale={[0.35, 0.9, 0.08]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for living kit 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* living-root - Living space */}
    <group name="Living space" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* living-room - Room */}
      <group name="Room" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* living-floor - Floor */}
        <group name="Floor" position={[0, 0.04, 0]} rotation={[0, 0, 0]} scale={[6, 0.08, 4.5]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
        {/* living-furniture-group - Furniture */}
        <group name="Furniture" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
          {/* living-sofa - Sofa */}
          <group name="Sofa" position={[-1.2, 0.45, 0.5]} rotation={[0, 0.25, 0]} scale={[1.8, 0.55, 0.85]}>
            <mesh castShadow receiveShadow>
              <boxGeometry args={[1, 1, 1]} />
              <meshStandardMaterial color="#9ca3af" />
            </mesh>
          </group>
          {/* living-table - Coffee table */}
          <group name="Coffee table" position={[0.6, 0.32, 0.4]} rotation={[0, 0, 0]} scale={[1.1, 0.12, 0.65]}>
            <mesh castShadow receiveShadow>
              <boxGeometry args={[1, 1, 1]} />
              <meshStandardMaterial color="#9ca3af" />
            </mesh>
          </group>
          {/* living-lamp - Floor lamp */}
          <group name="Floor lamp" position={[1.9, 0.95, -0.6]} rotation={[0, 0, 0]} scale={[0.2, 1.9, 0.2]}>
            <mesh castShadow receiveShadow>
              <boxGeometry args={[1, 1, 1]} />
              <meshStandardMaterial color="#9ca3af" />
            </mesh>
          </group>
        </group>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for nested root transform hierarchy 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* nested-root - Nested Root */}
    <group name="Nested Root" position={[10, 0, 0]} rotation={[0, 0.25, 0]} scale={[1.5, 1.5, 1.5]}>
      {/* nested-parent - Nested Parent */}
      <group name="Nested Parent" position={[0, 2, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* nested-child - Nested Child */}
        <group name="Nested Child" position={[0, 0, 3]} rotation={[0.1, 0.2, 0.3]} scale={[1, 1, 1]}>
          <mesh castShadow receiveShadow>
            <boxGeometry args={[1, 1, 1]} />
            <meshStandardMaterial color="#9ca3af" />
          </mesh>
        </group>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for scene light nodes 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* r3f-light-root - Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* sky - Sky fill */}
      <group name="Sky fill" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <ambientLight intensity={0.32} />
      </group>
      {/* sun - Sun */}
      <group name="Sun" position={[4, 10, 6]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <directionalLight intensity={1.05} castShadow />
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > matches snapshot for showroom (nested branches) 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* showroom-root - Messy Product Showroom */}
    <group name="Messy Product Showroom" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* floor - Floor */}
      <group name="Floor" position={[0, -0.05, 0]} rotation={[0, 0, 0]} scale={[8, 0.1, 6]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* wall - North Wall */}
      <group name="North Wall" position={[0, 1.6, -3]} rotation={[0, 0, 0]} scale={[8, 3.2, 0.12]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_01 - Product 01 */}
      <group name="Product 01" position={[-1.8, 0.65, 0.4]} rotation={[0, 0.4, 0]} scale={[0.65, 0.9, 0.65]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* bench - Bench */}
      <group name="Bench" position={[-2.6, 0.32, 1.9]} rotation={[0, 0.18, 0]} scale={[1.5, 0.45, 0.55]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_table - Display Table */}
      <group name="Display Table" position={[-0.4, 0.28, 0.15]} rotation={[0, -0.12, 0]} scale={[1.8, 0.35, 0.9]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_03 - Product 03 */}
      <group name="Product 03" position={[0.35, 0.8, 1.45]} rotation={[0, 0.85, 0]} scale={[0.55, 1.1, 0.55]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* light_fill - Light Fill */}
      <group name="Light Fill" position={[3.1, 2.4, 2.5]} rotation={[0, -0.4, 0]} scale={[0.25, 0.25, 0.25]}>
        <ambientLight intensity={0.35} />
      </group>
      {/* chair - Chair */}
      <group name="Chair" position={[2.7, 0.45, 1.65]} rotation={[0, -0.55, 0]} scale={[0.75, 0.9, 0.75]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* display_plinth - Display Plinth */}
      <group name="Display Plinth" position={[1.3, 0.32, 1.15]} rotation={[0, 0.1, 0]} scale={[0.9, 0.65, 0.9]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* product_02 - Product 02 */}
      <group name="Product 02" position={[2.1, 0.55, -0.2]} rotation={[0, -0.25, 0]} scale={[0.8, 0.7, 0.8]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
      {/* light_key - Light Key */}
      <group name="Light Key" position={[-3.2, 3.4, 2.2]} rotation={[0, 0.5, 0]} scale={[0.25, 0.25, 0.25]}>
        <directionalLight intensity={1.2} castShadow />
      </group>
      {/* backdrop_panel - Backdrop Panel */}
      <group name="Backdrop Panel" position={[-2.4, 1.05, -2.65]} rotation={[0, 0.18, 0]} scale={[1.6, 2.1, 0.1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > omits hidden nodes and their descendants 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
    {/* hidden-root - Hidden root */}
    <group name="Hidden root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
    </group>
</>
"
`;

exports[`exportSceneToR3fJsx > prepends optional studio lights when requested 1`] = `
"/* eslint-disable */
/* Auto-generated for React Three Fiber - paste inside <Canvas> */
<>
  {/* Studio fill - not from scene graph */}
  <ambientLight intensity={0.4} />
  <directionalLight castShadow position={[5, 8, 5]} intensity={1.1} />
    {/* default-root - Root */}
    <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
      {/* default-cube-1 - Cube 1 */}
      <group name="Cube 1" position={[0, 0.5, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      </group>
    </group>
</>
"
`;
